<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/drawerLayout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:id="@+id/rl_title"
            android:background="@color/theme"
            android:layout_width="match_parent">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:id="@+id/rl_mine"
                >
                <TextView
                    android:layout_margin="10dp"
                    android:id="@+id/tv_mine"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:clickable="false"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/ic_menu_white_24dp"/>
            </RelativeLayout>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/rl_mine"
                android:layout_centerVertical="true"

                android:text="@string/name"
                android:textColor="@color/white"/>
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="40dp"
                android:layout_alignParentRight="true"
                >
                <TextView android:layout_height="18dp"
                    android:layout_width="24dp"
                    android:background="@mipmap/ic_chat_white_24dp"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:id="@+id/tv_chat"
                    android:layout_alignParentRight="true"/>
                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@mipmap/abc_ic_search_api_mtrl_alpha"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_search"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_menu"
            android:layout_below="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_index"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:background="@color/theme"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/menu_text_index"
                    style="@style/menu"
                    android:text="@string/index"/>
                <ImageView
                    android:id="@+id/menu_iv_index"
                    android:layout_height="12dp"
                    android:layout_width="12dp"
                    android:layout_toRightOf="@+id/menu_text_index"
                    android:visibility="gone"
                    android:src="@mipmap/partner_red"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_subscribe"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:background="@color/theme"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/menu_text_subscribe"
                    style="@style/menu"
                    android:text="@string/subscribe"/>
                <ImageView
                    android:id="@+id/menu_iv_subscribe"
                    android:layout_height="12dp"
                    android:layout_width="12dp"
                    android:visibility="gone"
                    android:layout_toRightOf="@+id/menu_text_subscribe"
                    android:src="@mipmap/partner_red"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_message"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/theme"
                >

                <TextView
                    android:id="@+id/menu_text_message"
                    style="@style/menu"
                    android:text="@string/message"/>
                <ImageView
                    android:id="@+id/menu_iv_message"
                    android:layout_height="12dp"
                    android:layout_width="12dp"
                    android:visibility="gone"
                    android:layout_toRightOf="@+id/menu_text_message"
                    android:src="@mipmap/partner_red"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_discover"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:background="@color/theme"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/menu_text_discover"
                    style="@style/menu"
                    android:text="@string/discover"/>
                <ImageView
                    android:id="@+id/menu_iv_discover"
                    android:layout_height="12dp"
                    android:layout_width="12dp"
                    android:visibility="gone"
                    android:layout_toRightOf="@+id/menu_text_discover"
                    android:src="@mipmap/partner_red"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/menu_focus"
            android:layout_below="@+id/ll_menu"
            android:background="@color/theme"
            >
            <TextView
                style="@style/menu_focus"
                android:id="@+id/focus_index"
                />
            <TextView style="@style/menu_focus"
                android:id="@+id/focus_subscribe"/>
            <TextView style="@style/menu_focus"
                android:id="@+id/focus_message"/>
            <TextView style="@style/menu_focus"
                android:id="@+id/focus_discover"/>
            </LinearLayout>
        <View
            android:layout_below="@+id/menu_focus"
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:id="@+id/line_view"
            android:background="@color/theme"/>
        <android.support.v4.view.ViewPager
            android:layout_below="@+id/menu_focus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/vp_content"/>
    </RelativeLayout>
    <fragment
        android:name="com.vector.studynews.ui.fragment.MineFragment"
        android:layout_height="match_parent"
        android:layout_width="300dp"
        android:id="@+id/fg_mine"
        android:layout_gravity="start"
        android:tag="LEFT"
        tools:layout="@layout/fragment_mine"/>
</android.support.v4.widget.DrawerLayout>
